# Product2Schema

./: README.md  pyproject.toml  requirements.txt
Product2Schema/: engine.py
ProductProfiler/: extract_metadata.py  scrape.py
product2schema/: __init__.py  engine.py  extract_metadata.py  scrape.py
product2schema/models/: engine_models.py  product_models.py
